<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="Pooja ID"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/customer_name_conf"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/pooja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/poojas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/pooja1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_45"
        android:layout_marginLeft="@dimen/margin_35"
        android:gravity="center_horizontal"
        android:text="@string/pooja_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/pooja2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_45"
        android:gravity="center_horizontal"
        android:text="@string/pooja_b"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/pooja3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_45"
        android:gravity="center_horizontal"
        android:text="@string/pooja_c"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TableRow
        android:id="@+id/hr1"
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#444"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TableRow>

    <TextView
        android:id="@+id/Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_45"
        android:layout_marginTop="@dimen/margin_15"
        android:gravity="center_horizontal"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/circle"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="@dimen/margin_45"
            android:background="@drawable/button_bg_round"
            android:src="@drawable/ic_action_check1" />

        <ImageButton
            android:id="@+id/circle1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="240dp"
            android:layout_marginTop="@dimen/margin_45"
            android:background="@drawable/button_bg_round"
            android:src="@drawable/ic_action_clear" />
    </RelativeLayout>
</LinearLayout>