<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="Onclick"
            type="org.amfoss.templeapp.activities.InsertData.Onclick" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:onCheckedChanged="@{Onclick.onCheckedChanged}"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_pooja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/register_for_new_pooja"
                        android:theme="@style/radioButton" />

                    <RadioButton
                        android:id="@+id/radio_donate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/donate_money_to_temple"
                        android:theme="@style/radioButton" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/total_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/user_id" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/select_pooja_type"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/money_donated"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/enter_money_donated" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="45dp"
                    android:entries="@array/pooja_types"
                    android:prompt="@style/Base.Widget.AppCompat.Light.PopupMenu.Overflow" />

                <EditText
                    android:id="@+id/custompooja"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="custompooja" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/name" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="amount" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/paid_check"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="45dp"
                    android:onClick="@{Onclick.onClick}"
                    android:text="@string/PAID" />


                <Button
                    android:id="@+id/insert_btn"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_animated"
                    android:onClick="@{Onclick.insertButton}"
                    android:text="@string/insert_"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>