<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="update"
            type="org.amfoss.templeapp.activities.UpdateData.Update" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:onCheckedChanged="@{update ::onCheckedChanged}"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_pooja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/update_registered_pooja_details"
                        android:theme="@style/radioButton" />

                    <RadioButton
                        android:id="@+id/radio_donate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/update_the_details_of_donated_money"
                        android:theme="@style/radioButton" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/total_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/uid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/user_id" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/select_pooja_type"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/money_donated"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/enter_money_donated" />


                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="45dp"
                    android:entries="@array/pooja_types"
                    android:onItemSelected="@{update :: onItemSelected}"
                    android:prompt="@style/Base.Widget.AppCompat.Light.PopupMenu.Overflow" />

                <EditText
                    android:id="@+id/custompooja"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="custompooja" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="amount" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="45dp"
                    android:hint="@string/name" />


                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/paid_check"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="45dp"
                    android:onClick="@{update :: paidCheck}"
                    android:text="@string/PAID" />


                <Button
                    android:id="@+id/update_btn1"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_animated"
                    android:onClick="@{update :: updateButton}"
                    android:text="@string/update"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>