<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_pooja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:text="@string/people_who_registered_for_pooja"
                android:theme="@style/radioButton" />

            <RadioButton
                android:id="@+id/radio_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_15"
                android:text="@string/people_who_donated_money_for_temple"
                android:theme="@style/radioButton" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/total_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <EditText
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_45"
            android:hint="@string/user_id" />


        <Button
            android:id="@+id/delete_btn"
            android:layout_width="@dimen/width_175"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_24"
            android:background="@drawable/button_animated"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_18" />


    </RelativeLayout>

</LinearLayout>