<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_marginTop="@dimen/margin_35"
        android:layout_width="wrap_content"
        android:text="Pooja ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:focusable="true"
        android:hint="Eg: A598"
        android:id="@+id/editText"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/margin_35"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_marginRight="@dimen/margin_35"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:shadowColor="#000000"
        android:textSize="15sp" />


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_width="wrap_content"
        android:text="Customer Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:background="@drawable/edittext_background"
        android:hint="Eg: Ravi shankar"
        android:id="@+id/editText2"
        android:layout_height="51dp"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_marginRight="@dimen/margin_35"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:textSize="15sp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_marginTop="@dimen/margin_35"
        android:layout_width="wrap_content"
        android:text="Pooja type"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:background="@drawable/edittext_background"
        android:hint="Eg: Archana"
        android:id="@+id/editText3"
        android:layout_height="51dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="35dp"
        android:layout_width="160dp"
        android:padding="12dp"
        android:textSize="15sp" />


    <TextView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_35"
        android:layout_marginStart="235dp"
        android:layout_marginTop="-45dp"
        android:layout_width="wrap_content"
        android:text="Pooja ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <EditText
        android:background="@drawable/edittext_background"
        android:hint="@string/amount"
        android:id="@+id/editText4"
        android:inputType="number"
        android:layout_height="51dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="-35dp"
        android:layout_width="140dp"
        android:padding="12dp"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/ic_action_add1"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_width="52dp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="39dp"
            android:layout_width="wrap_content"
            android:text="@string/add_new_pooja"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/button_animated"
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="70dp"
            android:layout_width="wrap_content"
            android:text="@string/print" />

        <Button
            android:background="@drawable/button_animated"
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="confirm"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>
